--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,6 @@ name: UltimateClans
 main: me.ulrich.clans.Clans
 version: 1.0
 author: UlrichBR
-website: https://www.spigotmc.org/resources/authors/543977/
+website: https://polymart.org/team/ulrichcraft.99
 description: API.
 api-version: 1.13
